# THERSOL

./: .gitignore  Anchor.toml  README.md  package-lock.json  package.json
app/: .eslintrc.json  craco.config.js  package.json  vercel.json
app/public/: index.html  manifest.json
app/src/: App.css  App.tsx  Wallet.tsx  WalletContext.tsx  index.tsx
app/src/anchor/: idl.ts  setup.ts
app/src/components/: DoctorScene.tsx  doctor.jsx
app/src/types/: react-three.d.ts
programs/thera-sol/: Cargo.toml
programs/thera-sol/src/: lib.rs
tests/: thera-sol-devnet.ts  thera-sol.ts
